# NDK_gif_lesson_one

./: README.md
NDK_GIF/app/: CMakeLists.txt  build.gradle
NDK_GIF/app/src/androidTest/java/com/netease/ndk_gif/: ExampleInstrumentedTest.kt
NDK_GIF/app/src/main/: AndroidManifest.xml
NDK_GIF/app/src/main/cpp/: native-lib.cpp
NDK_GIF/app/src/main/java/com/netease/ndk_gif/: GifHandler.kt  ManActivity.java
NDK_GIF/app/src/main/res/layout/: activity_main.xml
NDK_GIF/app/src/main/res/values/: strings.xml
NDK_GIF/app/src/test/java/com/netease/ndk_gif/: ExampleUnitTest.kt
NDK_GIF/gradle/wrapper/: gradle-wrapper.properties
example/: 使用说明.txt
